Fixing menu max width for desktop size to stop overflow

--- a/src/components/menu/_menu.scss
+++ b/src/components/menu/_menu.scss
@@ -27,4 +27,5 @@
     top: 0;
     z-index: $z-index-2;
     width: 100%;
+    max-width: $app-max-width;
 }
